--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "engines": {
     "node": "^14.18.0 || >=16.0.0"
   },
+  "dependencies": {},
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
     "electron": "^21.1.0",
     "electron-builder": "^23.3.3",
     "typescript": "^4.8.4",
     "vite": "^3.2.2",
-    "vite-electron-plugin": "^0.5.0",
+    "vite-plugin-electron": "^0.10.4",
     "vite-plugin-electron-renderer": "^0.11.1",
     "vue": "^3.2.40",
     "vue-tsc": "^1.0.9"
