--- a/package.json
+++ b/package.json
@@ -6,35 +6,32 @@
   "author": "草鞋没号 <308487730@qq.com>",
   "license": "MIT",
   "private": true,
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build && electron-builder"
-  },
-  "engines": {
-    "node": "^14.18.0 || >=16.0.0"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "electron": "^22.0.0",
-    "electron-builder": "^23.3.3",
-    "typescript": "^4.8.4",
-    "vite": "^4.0.0",
-    "vite-plugin-electron": "^0.11.1",
-    "vite-plugin-electron-renderer": "^0.11.3",
-    "vue": "^3.2.40",
-    "vue-tsc": "^1.0.9"
-  },
-  "debug": {
-    "env": {
-      "VITE_DEV_SERVER_URL": "http://127.0.0.1:3344"
-    }
-  },
   "keywords": [
     "electron",
     "rollup",
     "vite",
     "vue3",
     "vue"
-  ]
+  ],
+  "debug": {
+    "env": {
+      "VITE_DEV_SERVER_URL": "http://127.0.0.1:3344/"
+    }
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build && electron-builder",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^4.0.0",
+    "electron": "^22.0.0",
+    "electron-builder": "^23.6.0",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.3",
+    "vite-plugin-electron": "^0.11.1",
+    "vite-plugin-electron-renderer": "^0.11.3",
+    "vue": "^3.2.45",
+    "vue-tsc": "^1.0.16"
+  }
 }
