feat: exclude node_modules from resources

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -10,7 +10,8 @@
   },
   "files": [
     "dist-electron",
-    "dist"
+    "dist",
+    "!node_modules/**/*"
   ],
   "mac": {
     "artifactName": "${productName}_${version}.${ext}",
