--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "vite-plugin-electron-renderer": "^0.14.1",
     "vue": "^3.2.47",
     "vue-tsc": "^1.2.0"
+  },
+  "dependencies": {
+    "electron-store": "^8.1.0"
   }
 }
