--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,5 +6,10 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts", "package.json", "electron"]
+  "include": [
+    "vite.config.ts",
+    "package.json",
+    "electron",
+    "types/*"
+  ]
 }
