--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "electron-vue-vite",
-  "version": "2.0.0",
+  "version": "0.0.1",
   "main": "dist-electron/main/index.js",
   "description": "Really simple Electron + Vue + Vite boilerplate.",
-  "author": "草鞋没号 <308487730@qq.com>",
+  "author": "LittleYuan <littley@outlook.ie>",
   "license": "MIT",
   "private": true,
   "keywords": [
@@ -21,12 +21,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build && electron-builder",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --fix --ext .ts,.vue ./src"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
     "@vitejs/plugin-vue": "^4.1.0",
     "electron": "^23.1.1",
     "electron-builder": "^23.6.0",
+    "eslint": "^8.39.0",
+    "eslint-plugin-vue": "^9.11.0",
     "typescript": "^5.0.2",
     "vite": "^4.1.4",
     "vite-plugin-electron": "^0.11.2",
