--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "electron-builder": "^23.6.0",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
+    "less": "^4.1.3",
     "typescript": "^5.0.2",
     "vite": "^4.1.4",
     "vite-plugin-electron": "^0.11.2",
