--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "electron-vue-vite",
-  "version": "2.0.0",
+  "name": "poe_gpt",
+  "version": "1.0.0",
   "main": "dist-electron/main/index.js",
   "description": "Really simple Electron + Vue + Vite boilerplate.",
   "author": "草鞋没号 <308487730@qq.com>",
@@ -20,18 +20,32 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build && electron-builder",
+    "build": "vite build && electron-builder",
+    "build:64": "vite build && electron-builder --win --x64",
+    "build:32": "vite build && electron-builder --win --x32",
     "preview": "vite preview"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
     "electron": "^25.0.1",
     "electron-builder": "^23.6.0",
     "typescript": "^5.0.2",
+    "unplugin-auto-import": "^0.16.4",
+    "unplugin-vue-components": "^0.25.0",
     "vite": "^4.1.4",
     "vite-plugin-electron": "^0.11.2",
     "vite-plugin-electron-renderer": "^0.14.1",
     "vue": "^3.2.47",
     "vue-tsc": "^1.2.0"
+  },
+  "dependencies": {
+    "@vueuse/core": "^10.1.2",
+    "naive-ui": "^2.34.4",
+    "puppeteer": "^13.3.2",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "sass": "^1.62.1",
+    "unocss": "^0.52.7"
   }
 }
