--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "@vueuse/core": "^10.1.2",
     "axios": "^1.4.0",
     "chrome-launcher": "^0.15.2",
+    "fake-useragent": "^1.0.1",
     "mockjs": "^1.1.0",
     "naive-ui": "^2.34.4",
     "proxy-chain": "^2.3.0",
     "puppeteer": "^13.3.2",
     "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-recaptcha": "^3.6.8",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "sass": "^1.62.1",
     "socks-proxy-agent": "^8.0.1",
