--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.1.0",
-    "electron": "^25.0.1",
-    "electron-builder": "^24.4.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.1.4",
-    "vite-plugin-electron": "^0.12.0",
-    "vite-plugin-electron-renderer": "^0.14.1",
-    "vue": "^3.2.47",
-    "vue-tsc": "^1.2.0"
+    "@vitejs/plugin-vue": "^4.3.3",
+    "electron": "^26.0.0",
+    "electron-builder": "^24.6.3",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.9",
+    "vite-plugin-electron": "^0.13.0-beta.3",
+    "vite-plugin-electron-renderer": "^0.14.5",
+    "vue": "^3.3.4",
+    "vue-tsc": "^1.8.8"
   }
 }
