--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -11,7 +11,8 @@
   },
   "files": [
     "dist",
-    "dist-electron"
+    "dist-electron",
+    "!node_modules"
   ],
   "mac": {
     "target": [
