--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "@vitejs/plugin-vue": "^4.3.3",
     "electron": "^26.0.0",
     "electron-builder": "^24.6.3",
+    "tree-kill": "^1.2.2",
     "typescript": "^5.1.6",
     "vite": "^4.4.9",
-    "vite-plugin-electron": "^0.14.0",
+    "vite-plugin-electron": "^0.15.1",
     "vite-plugin-electron-renderer": "^0.14.5",
     "vue": "^3.3.4",
     "vue-tsc": "^1.8.8"
