--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "electron-vue-vite",
-  "version": "2.0.0",
-  "main": "dist-electron/main/index.js",
+  "version": "2.2.0",
+  "main": "dist-electron/main/index.mjs",
   "description": "Really simple Electron + Vue + Vite boilerplate.",
   "author": "草鞋没号 <308487730@qq.com>",
   "license": "MIT",
@@ -24,15 +24,15 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.3.3",
-    "electron": "^27.1.3",
-    "electron-builder": "^24.6.3",
+    "@vitejs/plugin-vue": "^5.0.1",
+    "electron": "^28.1.0",
+    "electron-builder": "^24.9.1",
     "tree-kill": "^1.2.2",
-    "typescript": "^5.1.6",
-    "vite": "^5.0.4",
-    "vite-plugin-electron": "^0.15.5",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.10",
+    "vite-plugin-electron": "^0.28.0-beta.1",
     "vite-plugin-electron-renderer": "^0.14.5",
-    "vue": "^3.3.4",
-    "vue-tsc": "^1.8.8"
+    "vue": "^3.4.1",
+    "vue-tsc": "^1.8.27"
   }
 }
