--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "electron-vue-vite",
   "version": "28.0.0",
-  "main": "dist-electron/main/index.mjs",
+  "main": "dist-electron/main/index.js",
   "description": "Really simple Electron + Vue + Vite boilerplate.",
   "author": "草鞋没号 <308487730@qq.com>",
   "license": "MIT",
@@ -31,7 +31,7 @@
     "tree-kill": "^1.2.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.10",
-    "vite-plugin-electron": "^0.28.0-beta.1",
+    "vite-plugin-electron": "^0.28.0-beta.2",
     "vite-plugin-electron-renderer": "^0.14.5",
     "vue": "^3.4.1",
     "vue-tsc": "^1.8.27"
