chore: update electron-builder.json5

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -1,6 +1,4 @@
-/**
- * @see https://www.electron.build/configuration/configuration
- */
+// @see https://www.electron.build/configuration/configuration
 {
   "$schema": "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
   "appId": "YourAppID",
